<resources>
    <string name="app_name">SoftwareDesign</string>
    <string name="imei_info">Imei: %1$s</string>
    <string name="version_info">Версия проекта: %1$s</string>
    <string name="clear">Ясно</string>
    <string name="sure">Я уверен</string>
    <string name="not_sure">Дать разрешение</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="about_permission">Нам необходим доступ к звонкам для того, чтобы показать вам индефикатор вашего устройства.\nВы хотите дать разрешение?</string>
    <string name="about_permission_decline">Нам необходим доступ к звонкам для того, чтобы показать вам индефикатор вашего устройства.\nВы уверены, что не хотите дать это разрешение?</string>
    <string name="set_permission_yourself">Вы запретили это разрешение вручную. Если вы хотите дать разрешение, то перейдите в Настройки->Приложения->SoftwareDesign->Разрешения.\nПосле дайте разрешение к звонкам.</string>
    <string name="no_permission">Imei: Нажмите для получения</string>
    <string name="get_imei">Получить imei</string>
    
    <string name="title_profile">Профиль</string>
    <string name="title_something">Что-то</string>
    <string name="profile">Профиль</string>
    <string name="page">Страница</string>
    <string name="not_page">Не страница</string>
    <string name="about">О программе</string>
    <string name="edit_profile">Редактировать</string>
    <string name="save_profile">Сохранить</string>
    <string name="name_hint">Имя</string>
    <string name="surname_hint">Фамилия</string>
    <string name="phone_number_hint">Номер телефона</string>
    <string name="email_hint">Почтовый адрес</string>
    <string name="load_image_from_gallery">Галерея</string>
    <string name="make_photo">Камера</string>

    <string name="name">Имя:</string>
    <string name="surname">Фамилия:</string>
    <string name="phone_number">Телефон:</string>
    <string name="email">Email:</string>
    <string name="no_information">Нет информации</string>
    <string name="password_hint">Пароль</string>
    <string name="auth">Авторизация</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="enter_email">Введите почту</string>
    <string name="enter_password">Введите пароль</string>
    <string name="sign_out">Выйти</string>
    <string name="sign_out_warning">Вы уверены, что хотите выйти</string>
    <string name="rss_tape">RSS-лента</string>
    <string name="rss_source">Источник RSS</string>
    <string name="get_news">Получить</string>
    <string name="no_source_for_rss">У этого источника нет rss. Проверьте правильность ввода</string>
    <string name="all_article">Вся статья</string>
    <string name="no_internet_connection">Нет подкдючения к интернету</string>
    <string name="error_unknown">Непридвиденная ошибка.</string>
    <string name="error_invalid_email">Неверный формат почты.</string>
    <string name="error_user_not_exist">Такого пользователь нет. Зарегистрируйтесь.</string>
    <string name="error_invalid_password">Неверный формат пароля. Пароль должен сосоять хотя бы из 6 латинских символов и цифр.
    </string>
    <string name="error_no_connection">Вы не подключены к интернету.</string>
    <string name="error_user_exists">Такой пользователь уже зарегистрирован.</string>
    <string name="news">Новости</string>
    <string name="editing">Редактирование</string>
    <string name="change_source_of_rss">Источкик RSS</string>
    <string name="ok">OK</string>
    <string name="warning_about_saving">Ваши новые данные не сохранены. Сохранить?</string>
    <string name="or">или</string>
</resources>
