<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
            android:id="@+id/user_image_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"/>

    <Button
            android:id="@+id/load_image_from_gallery_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/load_image_from_gallery"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/user_image_iv"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorOrange"/>

    <Button
            android:id="@+id/make_photo_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/make_photo"
            android:textSize="15sp"
            app:layout_constraintLeft_toRightOf="@id/user_image_iv"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/load_image_from_gallery_btn"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10sp"
            android:background="@color/colorOrange"/>

    <EditText
            android:id="@+id/user_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/user_image_iv"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/name_hint"/>

    <EditText
            android:id="@+id/user_surname_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/user_name_et"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/surname_hint"/>

    <EditText
            android:id="@+id/user_phone_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/user_surname_et"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/phone_number_hint"/>

    <EditText
            android:id="@+id/user_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/user_phone_number_et"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/email_hint"/>

    <Button
            android:id="@+id/save_profile_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_profile"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@color/colorOrange"/>

</androidx.constraintlayout.widget.ConstraintLayout>