<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
            android:id="@+id/user_image_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"/>

    <TextView
            android:id="@+id/name_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/user_image_iv"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="30dp"
            android:text="@string/name"/>

    <TextView
            android:id="@+id/user_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/user_image_iv"
            app:layout_constraintLeft_toRightOf="@+id/name_info_tv"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:text="@string/no_information"/>

    <TextView
            android:id="@+id/surname_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/name_info_tv"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="30dp"
            android:text="@string/surname"/>

    <TextView
            android:id="@+id/user_surname_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/user_name_tv"
            app:layout_constraintLeft_toRightOf="@+id/surname_info_tv"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="15dp"
            android:text="@string/no_information"/>

    <TextView
            android:id="@+id/phone_number_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/surname_info_tv"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="30dp"
            android:text="@string/phone_number"/>

    <TextView
            android:id="@+id/user_phone_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/user_surname_tv"
            app:layout_constraintLeft_toRightOf="@+id/phone_number_info_tv"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="15dp"
            android:text="@string/no_information"/>

    <TextView
            android:id="@+id/email_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_info_tv"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="30dp"
            android:text="@string/email"/>

    <TextView
            android:id="@+id/user_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/user_phone_number_tv"
            app:layout_constraintLeft_toRightOf="@+id/email_info_tv"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="15dp"
            android:text="@string/no_information"/>

    <Button android:id="@+id/edit_profile_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@color/colorOrange"/>

</androidx.constraintlayout.widget.ConstraintLayout>